classDiagram
    direction LR

    namespace CredentialManagement {
        class Credential {
            <<sealed interface>>
        }
        class Bearer { +token: String }
        class ApiKey { +key: String; +headerName: String }
        class Basic { +username: String; +password: String }
        class Custom { +type: String; +properties: Map }

        class CredentialProvider {
            <<interface>>
            +current() Credential?
            +refresh() Credential?
            +invalidate()
        }

        class CredentialHeaderMapper {
            <<object>>
            +toHeaders(credential) Map~String,String~
        }
    }

    namespace SessionLifecycle {
        class SessionController {
            <<interface>>
            +state: StateFlow~SessionState~
            +events: Flow~SessionEvent~
            +isAuthenticated: Boolean
            +startSession(credentials)
            +refreshSession() RefreshOutcome
            +endSession()
            +invalidate()
        }

        class SessionState {
            <<sealed interface>>
        }
        class Idle
        class Active { +credential: Credential }
        class Expired

        class SessionCredentials {
            +credential: Credential
            +refreshToken: String?
            +expiresAtMs: Long?
        }
    }

    namespace Storage {
        class SecretStore {
            <<interface>>
            +putString(key, value)
            +getString(key) String?
            +putBytes(key, value)
            +getBytes(key) ByteArray?
            +remove(key)
            +clear()
            +contains(key) Boolean
            +keys() Set~String~
            +putStringIfAbsent(key, value) Boolean
        }
    }

    namespace Trust {
        class TrustPolicy {
            <<interface>>
            +evaluateHost(hostname) TrustEvaluation
            +pinnedCertificates() Map
        }
    }

    namespace LogProtection {
        class LogSanitizer {
            <<interface>>
            +sanitize(key, value) String
        }
    }

    Credential <|.. Bearer
    Credential <|.. ApiKey
    Credential <|.. Basic
    Credential <|.. Custom

    CredentialProvider --> Credential : provides
    CredentialHeaderMapper --> Credential : converts

    SessionController --> SessionState : exposes
    SessionState <|.. Idle
    SessionState <|.. Active
    SessionState <|.. Expired
    Active --> Credential : contains
    SessionCredentials --> Credential : wraps
    SessionController --> SessionCredentials : receives
